add interactive mode + patch files